--- a/docs/cloud/mcp/mcp-tools.mdx
+++ b/docs/cloud/mcp/mcp-tools.mdx
@@ -3,7 +3,7 @@ title: "MCP Tools"
 sidebarTitle: "MCP tools"
 ---
 This is full list of tools currently exposed by the Elementary MCP Server.
-These tools allow agents and interfaces to retrieve information from your Elementary environment — such as models, tests, lineage, incidents, and coverage — in a structured and consistent way.
+These tools allow agents and interfaces to retrieve information from your Elementary environment, such as models, tests, lineage, incidents, and coverage, in a structured and consistent way.
 You won’t need to use these tools directly. They’re used behind the scenes by any MCP-compatible client.
 
 | **Category** | **Tool Name** | **Purpose** | **Output** |
