--- a/docs/cloud/mcp/overview.mdx
+++ b/docs/cloud/mcp/overview.mdx
@@ -5,6 +5,13 @@ sidebarTitle: "MCP overview"
 
 The Elementary MCP Server allows you to connect your Elementary environment to any client that supports MCP (Model Context Protocol). This lets AI agents, copilots, or natural language interfaces query and act on your data stack using live context.
 
+<Columns cols={2}>
+  <Card title="MCP Setup Guide" icon="panel-left-close">
+  </Card>
+  <Card title="Available MCP Tools" icon="panel-right-close">
+  </Card>
+</Columns>
+
 ## What is MCP?
 
 MCP (Model Context Protocol) is an open protocol introduced by Anthropic. It defines a way for AI systems to retrieve context and trigger actions from external tools in a structured way.
