--- a/docs/cloud/mcp/overview.mdx
+++ b/docs/cloud/mcp/overview.mdx
@@ -5,6 +5,12 @@ sidebarTitle: "MCP overview"
 
 The Elementary MCP Server allows you to connect your Elementary environment to any client that supports MCP (Model Context Protocol). This lets AI agents, copilots, or natural language interfaces query and act on your data stack using live context.
 
+<iframe 
+  src="https://res.cloudinary.com/do5hrgokq/video/upload/v1754384322/Claude-mcp-demo2_tgsum2.mp4" 
+  title="Elementary-MCP"
+  className="w-full h-96 rounded-xl"
+></iframe>
+
 <Columns cols={2}>
   <Card title="MCP Setup Guide" icon="code-compare">
   </Card>
