--- a/docs/cloud/mcp/overview.mdx
+++ b/docs/cloud/mcp/overview.mdx
@@ -7,7 +7,6 @@ The Elementary MCP Server allows you to connect your Elementary environment to a
 
 <video
   controls
-  className="w-full aspect-video rounded-xl"
   src="https://res.cloudinary.com/do5hrgokq/video/upload/v1754384322/Claude-mcp-demo2_tgsum2.mp4"
 ></video>
 
@@ -33,13 +32,7 @@ This enables workflows like:
 
 ## How it works
 
-The MCP Server runs as a remote service and is exposed via a single authenticated endpoint. It is compatible with any MCP-enabled client.
-
-**Client examples:**
-
-- Claude Desktop
-- Cursor IDE
-- Custom agents and LLM copilots
+The MCP Server runs as a remote service and is exposed via a single authenticated endpoint. It is compatible with any MCP-enabled client, such as Claude, Cursor IDE and Custom agents and LLM copilots.
 
 ## Supported operations
 
@@ -61,9 +54,11 @@ We're expanding support to include:
 - Sync triggers
 - Cloud test config updates
 
+
 <Columns cols={2}>
-  <Card title="MCP Setup Guide" icon="code-compare">
+  <Card title="MCP Setup Guide" icon="code-compare" href="/cloud/mcp/setup-guide">
   </Card>
-  <Card title="Available MCP Tools" icon="gear-code">
+  <Card title="Available MCP Tools" icon="gear-code" href="/cloud/mcp/mcp-tools">
   </Card>
 </Columns>
+
