--- a/docs/cloud/mcp/overview.mdx
+++ b/docs/cloud/mcp/overview.mdx
@@ -7,6 +7,8 @@ The Elementary MCP Server allows you to connect your Elementary environment to a
 
 <video
   controls
+  autoPlay
+  muted
   src="https://res.cloudinary.com/do5hrgokq/video/upload/v1754384322/Claude-mcp-demo2_tgsum2.mp4"
 ></video>
 
