--- a/docs/oss/quickstart/quickstart-tests.mdx
+++ b/docs/oss/quickstart/quickstart-tests.mdx
@@ -4,9 +4,9 @@ sidebarTitle: "Add Elementary tests"
 icon: "square-3"
 ---
 
-**Once you've set up the basic Elementary components — the dbt package and CLI — you can start adding Elementary tests to your data. 
+Once you've set up the basic Elementary components — the dbt package and CLI — you can start adding Elementary tests to your data. 
 
-You can add Elementary tests once completing the initial setup or later as you identify critical tables and metrics.** 
+You can add Elementary tests once completing the initial setup or later as you identify critical tables and metrics.
 
 Many teams start with a few volume or freshness tests, then expand coverage as needed.
 
