homepage: fix issue with some headings having large spaces between the lines

--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -11,8 +11,8 @@ icon: "house"
         <div className="home__hero-content">
           <div className="home__hero-text-block">
             <h1 className="home__hero-title">
-              Dev-First <br />
-              AI-Powered <br />
+              Dev-First
+              AI-Powered
               Data Observability
             </h1>
             <p className="home__hero-subtitle">
@@ -53,7 +53,7 @@ icon: "house"
     <div className="home__jump-navigation">
       <div className="home__jump-navigation-content">
         <h2 className="home__jump-navigation-heading">
-          Discover what you can do <br />
+          Discover what you can do
           with Elementary
         </h2>
         <div className="home__jump-navigation-links">
