what is elementary small link change

--- a/docs/cloud/what-is-elementary.mdx
+++ b/docs/cloud/what-is-elementary.mdx
@@ -77,4 +77,4 @@ Learn more about how Elementary ensures security and privacy [here](https://docs
 **Want to know more?**
 
 - [Book a call with our team](https://meetings-eu1.hubspot.com/joost-boonzajer-flaes/intro-call-docs)
-- [Reach out on Slack](https://elementary-community.slack.com/ssb/redirect)
+- [Join the community and reach out on Slack](https://elementary-community.slack.com/ssb/redirect)
