Fix formatting in MCP overview documentation by adjusting bullet point style for clarity.

--- a/docs/cloud/mcp/overview.mdx
+++ b/docs/cloud/mcp/overview.mdx
@@ -40,7 +40,7 @@ The MCP Server runs as a remote service and is exposed via a single authenticate
 
 You can use the Elementary MCP Server for:
 
-- **Full asset details - M**etadata, column definitions, and test coverage
+- **Full asset details** - Metadata, column definitions, and test coverage
 - **Lineage** - Explore table + column-level lineage across dbt and BI tools
 - **Incidents -** View open incidents and their context
 - **Tests -** Browse and add tests using the test catalog
