Revise MCP setup guide: update personal access token generation process to allow direct management from the Elementary UI, streamline security reminders, and enhance clarity.

--- a/docs/cloud/mcp/setup-guide.mdx
+++ b/docs/cloud/mcp/setup-guide.mdx
@@ -29,18 +29,15 @@ npm install -g mcp-remote@latest
 ---
 
 ## 2 – Generate a personal access token
-**Design Partner Stage:** Personal access tokens are currently available to design partners only. To obtain a token, please reach out to the Elementary team and we'll provide you with one manually.
-**Coming soon:** Self-service token management will be available directly from the Elementary UI for all users.
-Elementary issues **user‑scoped bearer tokens**.  
-These tokens inherit **your** workspace permissions:
-* Treat them like passwords – **do not share or commit** them.  
-* Rotate regularly.  
-* Revoke immediately if compromised.
+You can now generate tokens directly from the Elementary UI: go to [User → Personal Tokens](https://demo.elementary-data.com/settings/tokens).
 
-### Security reminders
-* Tokens confer **all** your Elementary permissions.  
-* Keep them secret and scoped; rotate when in doubt.  
-* Revoke compromised tokens immediately.
+Quick steps:
+1. Open the **User → Personal Tokens** page and click **Generate token**.
+2. (Optional) Add a name/description.
+3. Copy the token and store it securely — it is shown once. Manage (revoke/rotate) anytime from the same page.
+
+### Security
+Tokens are **user‑scoped bearer tokens** and inherit your workspace permissions. Treat them like passwords — do not share or commit them. Keep them secret, rotate regularly, and revoke immediately if compromised.
 
 
 ---
