--- a/docs/cloud/mcp/setup-guide.mdx
+++ b/docs/cloud/mcp/setup-guide.mdx
@@ -29,7 +29,7 @@ npm install -g mcp-remote@latest
 ---
 
 ## 2 – Generate a personal access token
-You can now generate tokens directly from the Elementary UI: go to [User → Personal Tokens](https://demo.elementary-data.com/settings/tokens).
+You can now generate tokens directly from the Elementary UI: go to [User → Personal Tokens](https://app.elementary-data.com/settings/tokens).
 
 Quick steps:
 1. Open the **User → Personal Tokens** page and click **Generate token**.
