--- a/docs/cloud/features/anomaly-detection/metrics.mdx
+++ b/docs/cloud/features/anomaly-detection/metrics.mdx
@@ -100,4 +100,4 @@ We save the metrics in the Elementary schema and sync it to Elementary Cloud whe
 The metric chart will be visible in the Metrics screen, along with all the metrics Elementary has collected.
 If a test was created for the metric, it will be visible in Elementary just like any other test.
 
-To include alerts on Metrics Tests in your alert rules, simply edit your alert rule and check the box "Cloud content tests" under "Test Categories".
+To include alerts on Metrics Tests in your alert rules, simply edit your alert rule and check the box "Metric anomalies" under "Test Categories".
