--- a/docs/cloud/mcp/intro.mdx
+++ b/docs/cloud/mcp/intro.mdx
@@ -1,11 +1,11 @@
 ---
 title: "MCP Server"
 sidebarTitle: "Elementary MCP"
-icon: "code-simple"
+icon: "message-code"
 ---
 
 <Columns cols={3}>
-  <Card title="MCP Overview" icon="code-compare" href="/cloud/mcp/overview">
+  <Card title="MCP Overview" icon="message-code" href="/cloud/mcp/overview">
   </Card>
   <Card title="MCP Setup Guide" icon="code-compare" href="/cloud/mcp/setup-guide">
   </Card>
