--- a/docs/cloud/mcp/intro.mdx
+++ b/docs/cloud/mcp/intro.mdx
@@ -1,6 +1,6 @@
 ---
-title: "MCP Server"
-sidebarTitle: "Elementary MCP"
+title: "Elemetnary MCP Server"
+sidebarTitle: "MCP Server"
 icon: "message-code"
 ---
 
