--- a/docs/cloud/integrations/alerts/pagerduty.mdx
+++ b/docs/cloud/integrations/alerts/pagerduty.mdx
@@ -21,11 +21,7 @@ It is recommended to create [alert rules](cloud/features/alerts-and-incidents/al
 
 
 <Warning>
-Important: The user connecting PagerDuty must have at least a "User" role (not "Limited User") in PagerDuty, as this role is required to:
-- Create incidents in PagerDuty services
-- Add Events API v2 integrations to services
-- Complete the OAuth authentication process when prompted
-- Verify the connection by using the test connection feature
+Important: The user connecting PagerDuty must have at least a "User" role (not "Limited User") in PagerDuty, as this role is required add "Events API v2" integrations to services.
 </Warning>
 
 
