--- a/docs/_snippets/cloud/integrations/dremio.mdx
+++ b/docs/_snippets/cloud/integrations/dremio.mdx
@@ -16,17 +16,26 @@ This command will generate a query to create a user with the necessary permissio
 
 After the invitation was accepted, you need to sign in to Dremio as the Elementary user, and open the Account Settings (bottom-left corner in the Dremio UI):
 
-<img
-  src="/pics/cloud/dremio/account-settings.png"
-  alt="Dremio Account Settings"
-/>
+
+<Frame>
+  <div className="dark:bg-white rounded-md p-4">
+    <img
+      src="https://res.cloudinary.com/do5hrgokq/image/upload/v1757332256/dremio-account-settings_iswpf0.png"
+      alt="Dremio Account Settings"
+    />
+  </div>
+</Frame>
 
 Click **Generate Token**:
 
-<img
-  src="/pics/cloud/dremio/generate-token.png"
-  alt="Generate Token in Dremio"
-/>
+<Frame>
+  <div className="dark:bg-white rounded-md p-4">
+    <img
+      src="https://res.cloudinary.com/do5hrgokq/image/upload/v1757332259/dremio-token_cgdkeg.png"
+      alt="Generate Token in Dremio"
+    />
+  </div>
+</Frame>
 
 Set the **maximum lifetime** allowed by Dremio (currently **180 days**).
 
