--- a/docs/_snippets/cloud/integrations/dremio.mdx
+++ b/docs/_snippets/cloud/integrations/dremio.mdx
@@ -18,7 +18,7 @@ After the invitation was accepted, you need to sign in to Dremio as the Elementa
 
 
 <Frame>
-  <div className="dark:bg-white rounded-md p-4">
+  <div>
     <img
       src="https://res.cloudinary.com/do5hrgokq/image/upload/v1757332256/dremio-account-settings_iswpf0.png"
       alt="Dremio Account Settings"
@@ -29,7 +29,7 @@ After the invitation was accepted, you need to sign in to Dremio as the Elementa
 Click **Generate Token**:
 
 <Frame>
-  <div className="dark:bg-white rounded-md p-4">
+  <div>
     <img
       src="https://res.cloudinary.com/do5hrgokq/image/upload/v1757332259/dremio-token_cgdkeg.png"
       alt="Generate Token in Dremio"
@@ -67,7 +67,11 @@ Provide the following fields:
 - **User:** The email address of the Elementary user.
 - **Token:** The token you generated for the Elementary user.
  
- <img
-  src="/pics/cloud/dremio/dremio-form.png"
-  alt="Dremio connection form"
-/>
+<Frame>
+  <div className="dark:bg-white rounded-md p-4">
+    <img
+      src="https://res.cloudinary.com/do5hrgokq/image/upload/v1757332259/dremio-token_cgdkeg.png"
+      alt="Generate Token in Dremio"
+    />
+  </div>
+</Frame>
