--- a/docs/cloud/integrations/dwh/dremio.mdx
+++ b/docs/cloud/integrations/dwh/dremio.mdx
@@ -25,6 +25,8 @@ After the invitation was accepted, you need to sign in to Dremio as the Elementa
     <img
       src="https://res.cloudinary.com/do5hrgokq/image/upload/v1757332256/dremio-account-settings_iswpf0.png"
       alt="Dremio Account Settings"
+      height="300"
+
     />
 
 Click **Generate Token**:
@@ -34,6 +36,7 @@ Click **Generate Token**:
     <img
       src="https://res.cloudinary.com/do5hrgokq/image/upload/v1757332259/dremio-token_cgdkeg.png"
       alt="Generate Token in Dremio"
+        height="300"
     />
   </div>
 </Frame>
@@ -67,12 +70,6 @@ Provide the following fields:
 - **Project ID:** Your Dremio Cloud project ID.
 - **User:** The email address of the Elementary user.
 - **Token:** The token you generated for the Elementary user.
- 
-<Frame>
-  <div className="dark:bg-white rounded-md p-4">
-    <img
-      src="https://res.cloudinary.com/do5hrgokq/image/upload/v1757332259/dremio-token_cgdkeg.png"
-      alt="Generate Token in Dremio"
-    />
-  </div>
-</Frame>
+
+
+<Snippet file="cloud/integrations/onboarding-help.mdx" />
