--- a/docs/cloud/integrations/dwh/dremio.mdx
+++ b/docs/cloud/integrations/dwh/dremio.mdx
@@ -22,12 +22,17 @@ This command will generate a query to create a user with the necessary permissio
 
 After the invitation was accepted, you need to sign in to Dremio as the Elementary user, and open the Account Settings (bottom-left corner in the Dremio UI):
 
+    <Frame>
+  <div>
     <img
-      src="https://res.cloudinary.com/do5hrgokq/image/upload/v1757332256/dremio-account-settings_iswpf0.png"
+       src="https://res.cloudinary.com/do5hrgokq/image/upload/v1757332256/dremio-account-settings_iswpf0.png"
       alt="Dremio Account Settings"
       height="100"
 
     />
+  </div>
+</Frame>
+
 
 Click **Generate Token**:
 
