--- a/docs/cloud/integrations/dwh/dremio.mdx
+++ b/docs/cloud/integrations/dwh/dremio.mdx
@@ -20,7 +20,7 @@ dbt run-operation create_elementary_user --args '{user: the_mail_of_the_elementa
 
 This command will generate a query to create a user with the necessary permissions. Run this query on your data warehouse with admin permissions to create the user. It will send an email invitation, you need to accept that invitation.  
 
-After the invitation was accepted, you need to sign in to Dremio as the Elementary user, and open the Account Settings (bottom-left corner in the Dremio UI).
+After the invitation was accepted, you need to sign in to Dremio as the Elementary user, and open "Account Settings" by clicking on the bottom-left corner of the Dremio UI.
 
 Click **Generate Token**:
 
