--- a/docs/cloud/general/security-and-privacy.mdx
+++ b/docs/cloud/general/security-and-privacy.mdx
@@ -15,7 +15,7 @@ Our product is designed with security and privacy in mind.
 - Elementary offers deployment options with no direct access from Elementary Cloud to your data warehouse and third-party tools.
 
 <Check>
-  **SOC 2 certification:** Elementary Cloud is SOC2 type II certified!
+  Elementary Cloud is SOC2 type II certified and HIPAA compliant!
 </Check>
 
 <Note>
