--- a/docs/cloud/introduction.mdx
+++ b/docs/cloud/introduction.mdx
@@ -18,7 +18,10 @@ The Elementary Cloud Platform integrates into dbt workflows, providing a develop
   </Card>
 </CardGroup>
 
+<CardGroup cols={2}>
 <Card title="Webinar: The Elementary Cloud Platform" icon="circle-play" href="https://www.elementary-data.com/webinar/the-elementary-cloud-platform" />
+<Card title="Ella: AI Agents" icon="sparkles" href="/cloud/ai-agents/overview" />
+</CardGroup>
 
 
 ## Get started with Elementary Cloud
