--- a/docs/cloud/introduction.mdx
+++ b/docs/cloud/introduction.mdx
@@ -6,8 +6,7 @@ icon: "cloud"
 
 **Elementary is a data observability platform tailored for dbt-first data organizations.**
 
-The Elementary Cloud Platform integrates into dbt workflows, providing a developer-centric tool for engineers to maintain and govern data quality rules while also offering a cloud-based interface for business users and data stewards. This enables engineers to proactively identify and resolve data issues while consumers can monitor data health, receive notifications, view health scores, and add their own validations in a user-friendly environment. It offers advanced features like automated freshness and volume monitoring, ML-powered anomaly detection, a simple data catalog, and rich integrations.
-
+Elementary Cloud is a fully managed, AI-powered platform for organization-wide reliability. It includes smart alerting, incident management, column-level lineage, anomaly detection, AI agents, and enterprise features like RBAC and audit logs. It’s designed for teams that want to scale trust, automation, and collaboration across engineering and business.
 
 <CardGroup cols={3}>
   <Card title="Cloud Platform Features" icon="diagram-project" href="/cloud/features" >
@@ -18,9 +17,10 @@ The Elementary Cloud Platform integrates into dbt workflows, providing a develop
   </Card>
 </CardGroup>
 
-<CardGroup cols={2}>
-<Card title="Webinar: The Elementary Cloud Platform" icon="circle-play" href="https://www.elementary-data.com/webinar/the-elementary-cloud-platform" />
+<CardGroup cols={3}>
 <Card title="Ella: AI Agents" icon="sparkles" href="/cloud/ai-agents/overview" />
+<Card title="Elementary MCP Server" icon="message-code" href="/cloud/mcp/intro" />
+<Card title="Webinar: The Elementary Cloud Platform" icon="circle-play" href="https://www.elementary-data.com/webinar/the-elementary-cloud-platform" />
 </CardGroup>
 
 
