--- a/docs/_snippets/quickstart-package-install.mdx
+++ b/docs/_snippets/quickstart-package-install.mdx
@@ -75,18 +75,22 @@ Some packages we recommend you check out: [dbt_utils](https://github.com/dbt-lab
         **If you change materialization settings, make sure to run `dbt run -s elementary --full-refresh`.**
         
     </Accordion>
-    <Accordion title="Important: Allowing Elementary to override dbt's default materializations (relevant from dbt 1.8)">
-        <Snippet file="dbt-18-materializations-common.mdx" />
+    <Accordion title="Important: Allowing Elementary to override dbt's default test materializations (relevant from dbt 1.8)">
 
-        In order for these features to work, it is required to add the following flag to your `dbt_project.yml` file:
-        ```yml dbt_project.yml
-        flags:
-          require_explicit_package_overrides_for_builtin_materializations: false
+        In order for these features to work, it is required to add an sql file inside the `macros` folder of your dbt project with the following content:
+        
+        ```-- Use this snippet if you use any DWH other than Snowflake
+{% materialization test, default %}
+  {{ return(elementary.materialization_test_default()) }}
+{% endmaterialization %}
+
+-- Use this snippet if you use Snowflake
+{% materialization test, adapter='snowflake' %}
+  {{ return(elementary.materialization_test_snowflake()) }}
+{% endmaterialization %}
         ```
 
-        Please note that after setting this flag you may see a deprecation warning from dbt.
-        This is a temporary measure and we are working with the dbt team on a [longer term solution](https://github.com/dbt-labs/dbt-core/issues/10090).
-    </Accordion>
+         </Accordion>
 
     ```yml dbt_project.yml
     models:
