--- a/docs/_snippets/cloud/integrations/cards-groups/bi-cards.mdx
+++ b/docs/_snippets/cloud/integrations/cards-groups/bi-cards.mdx
@@ -112,6 +112,14 @@
     }
   >
   </Card>
+
+    <Card
+    title="Hex"
+    href="/cloud/integrations/bi/hex"
+    icon="https://res.cloudinary.com/do5hrgokq/image/upload/v1758103433/hexlogo_oz8kzh.png"
+    />
+
+
   <Card
     title="Metabase"
     href="https://tally.so/r/3N6DlW?integration=Metabase"
@@ -134,20 +142,6 @@
   >
     Click for details
   </Card>
-  <Card
-    title="Hex"
-    href="https://tally.so/r/3N6DlW?integration=Hex"
-    icon={
-      <img
-      src="https://res.cloudinary.com/do5hrgokq/image/upload/v1758103433/hexlogo_oz8kzh.png"
-      alt="Hex logo"
-      width={34}
-      height={36}
-    />
-    
-  }
->
-</Card>
 
   >
     Click for details
