--- a/docs/_snippets/cloud/integrations/cards-groups/bi-cards.mdx
+++ b/docs/_snippets/cloud/integrations/cards-groups/bi-cards.mdx
@@ -116,9 +116,8 @@
     <Card
     title="Hex"
     href="/cloud/integrations/bi/hex"
-    icon="https://res.cloudinary.com/do5hrgokq/image/upload/v1758103433/hexlogo_oz8kzh.png"
+    img="https://res.cloudinary.com/do5hrgokq/image/upload/v1758103433/hexlogo_oz8kzh.png"
     />
-
 
   <Card
     title="Metabase"
