--- a/docs/cloud/integrations/elementary-integrations.mdx
+++ b/docs/cloud/integrations/elementary-integrations.mdx
@@ -3,4 +3,6 @@ title: "Elementary integrations"
 sidebarTitle: "All integrations"
 ---
 
+Elementary connects seamlessly to your data warehouse, BI tools, code repositories, alerting, and ticketing systems—giving you full context and true end-to-end, column-level lineage. This unified view makes it easy to trace issues back to their source, understand downstream impact, and resolve problems faster.
+
 <Snippet file="cloud/integrations/cards-groups/cloud-integrations-cards.mdx" />
